update jvmargs, make changes more clear